--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -21,7 +21,7 @@ jobs:
       - run: npm install -g terser
       - run: terser ./js/spotify.js --compress --mangle -o ./js/spotify.js
       - run: |
-        git config --global user.name aricooperdavis
-        git config --global user.email aricooperdavis@user.noreply.github.com
+        git config user.name aricooperdavis
+        git config user.email aricooperdavis@user.noreply.github.com
         git commit -am 'Automated minify of {{ github.sha }}'
         git push -u origin main:gh-pages
