--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -1,27 +1,36 @@
-# This workflow should be triggered by a push to the main branch
-# and should minify the [js] in the repo then push the change to
-# the gh-pages branch, from which the site is built/served
+# This workflow is triggered by a push to the `main` branch
+# which it checks out, minimises the appropriate html/css/js
+# in-place, and pushes the changes to the `gh-pages` branch
 
 name: minify
 run-name: Minify JS/CSS/HTML [gh-pages branch]
+
+# Run on pushes to `main` branch
 on:
   push:
     branches:
       - 'main'
+
 jobs:
   checkout-minify-push:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+      # Install NodeJS and CLI tools
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
       - run: npm install -g terser
-      - run: terser ./js/spotilist.js --compress --mangle -o ./js/spotilist.js
       - run: npm install -g csso-cli
-      - run: csso ./css/style.css -o ./css/style.css
       - run: npm install -g html-minifier
+
+      # Perform minification, overwriting original files
+      - run: terser ./js/spotilist.js --compress --mangle -o ./js/spotilist.js
+      - run: csso ./css/style.css -o ./css/style.css
       - run: html-minifier --collapse-boolean-attributes --collapse-whitespace --minify-css --minify-js --minify-urls --remove-attribute-quotes --remove-comments --remove-empty-attributes --remove-empty-elements --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-style-link-type-attributes --remove-tag-whitespace --use-short-doctype -o index.html index.html
+
+      # (Force) push changes to `gh-pages` branch
       - run: |
           git config user.name aricooperdavis
           git config user.email aricooperdavis@user.noreply.github.com
