Minify: prevent removal of empty elements

--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -28,7 +28,7 @@ jobs:
       # Perform minification, overwriting original files
       - run: terser ./js/spotilist.js --compress --mangle -o ./js/spotilist.js
       - run: csso ./css/style.css -o ./css/style.css
-      - run: html-minifier --collapse-boolean-attributes --collapse-whitespace --minify-css --minify-js --minify-urls --remove-attribute-quotes --remove-comments --remove-empty-attributes --remove-empty-elements --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-style-link-type-attributes --remove-tag-whitespace --use-short-doctype -o index.html index.html
+      - run: html-minifier --collapse-boolean-attributes --collapse-whitespace --minify-css --minify-js --minify-urls --remove-attribute-quotes --remove-comments --remove-empty-attributes --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-style-link-type-attributes --remove-tag-whitespace --use-short-doctype -o index.html index.html
 
       # (Force) push changes to `gh-pages` branch
       - run: |
